@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- Made tidyall.ini generation smarter and more configurable.
+
+- Fix a formatting issue with the generated tidyall.ini when there were no
+  global ignores.
+
+
 0.82     2017-02-28
 
 - Don't assume that our dzil and podweaver plugin bundles have the same
